--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
 <body>
     <div class="container">
@@ -16,7 +17,7 @@
             <div class="row">
                 <div class="col-3">
                     <input type="text" class="form-control" placeholder="Nome">
-                </div>
+                </div>  
                 <div class="col-5">
                     <input type="text" class="form-control" placeholder="Sobrenome">
                 </div>
@@ -28,9 +29,12 @@
                 <h4>Dados da Entrega</h4>
             </div>
             <div class="row mb-5">
-                <div class="col-3">
+                <div class="col-3 d-flex">
                     <input type="text" class="form-control" placeholder="CEP" id="cep"/>
-                    <button type="button" class="btn btn-primary" id="btn-buscar-cep">Buscar</button>
+                    <button type="button" class="btn btn-primary" id="btn-buscar-cep">
+                        <i class="bi bi-search"></i>
+                        <span class="d-none spinner-border spinner-border-sm"></span>
+                    </button>
                 </div>
                 <div class="col-7">
                     <input type="text" class="form-control" placeholder="Endereço" id="endereco">
@@ -43,6 +47,7 @@
         </form>
     </div>
 
+    <script src="jquery.js"></script>
     <script src="./main.js"></script>
 </body>
 </html>
