--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
     </div>
 
     <script src="jquery.js"></script>
+    <script src="./jquery.mask.min.js"></script>
     <script src="./main.js"></script>
 </body>
 </html>
